--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
-https://codepen.io/Mamboleoo/pen/OPqmvx
-https://codepen.io/Mamboleoo/pen/EaMmQq
-https://codepen.io/Mamboleoo/pen/xboEJL
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="description" content="ThreejsDemo">
+  <meta name="author" content="ThreejsDemo">
+
+  <title>ThreejsDemo</title>
+  <link rel="stylesheet" href="main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+  <!--<script src="app.js"></script>-->
+</head>
+<body>
+
+<!-- My scene -->
+<canvas id="scene"></canvas>
+
+</body>
+<script src="app.js"></script>
+
+</html>
