--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
   <title>ThreejsDemo</title>
   <link rel="stylesheet" href="main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+  <script src="three.js"></script>
+  <script src="webgl.js"></script>
+  <script src="orbitcontrols.js"></script>
+  <script src="gltf2loader.js"></script>
+
   <!--<script src="app.js"></script>-->
 </head>
 <body>
